working :\ up to listing 7.15

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ playServicesMaps = "19.1.0"
 playServicesMapsLicense = "12.0.1"
 playServices = "12.0.1"
 playServicesLocation = "21.3.0"
+multidex = "1.0.3"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -26,6 +27,7 @@ play-services-maps = { group = "com.google.android.gms", name = "play-services-m
 play-services-maps-license = { group = "com.google.android.gms", name = "play-services-maps-license", version.ref = "playServicesMapsLicense" }
 play-services = { group = "com.google.android.gms", name = "play-services", version.ref = "playServices" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+multidex = { group = "com.android.support", name = "multidex", version.ref = "multidex" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
